--- a/koduppgift1/about.html
+++ b/koduppgift1/about.html
@@ -4,37 +4,46 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        /* Ska ligga i separat fil */
-        .bgx {background-color: darkkhaki;}
-    </style>
+    <link href="style.css" rel="stylesheet" >
+    <title>Parrot Parrotson</title>
+    
 
 </head>
 
 
-<body>
+<body> 
     <header>
-        <h5>This is a header</h5>
-        <h1>Parrot Parrotson</h1>
+        <nav class="navbar"> 
+            <a href="index.html">Homepage</a>
+            <a href="about.html">About me</a>
+        </nav>
     </header>
 
-    <nav> <a href="index.html">Homepage</a>
-        <a href="about.html">About me</a>
-    </nav>
+<main>
     <section>
-        <h2>Here is a bit more about me:</h2>
-        <table border=1> 
-            <tr><th>Age</th><td>25</td></tr>
-            <tr><th>Species</th><td>Ara chloropterus</td></tr>
-            <tr><th>Place of origin</th><td>Peru</td></tr>
-            <tr><th>Gender</th><td>Unknown</td></tr>
-        </table>
-    </section>
+        <h1>Parrot Parrotson</h1>
+        <img src="images/parrot.jpg"width="200"><br>
+        <p>Hello and welcome to my page! </p>
+        <p>I am Parrot!</p> 
+        </section>
 
-    <footer>
-        <h5>This is a footer</h5>
-    </footer>
+        <section>
+            <h2>Here is a bit more about me:</h2>
+            <table> 
+                <tr><th>Age</th><td>25</td></tr>
+                <tr><th>Species</th><td>Ara chloropterus</td></tr>
+                <tr><th>Place of origin</th><td>Peru</td></tr>
+                <tr><th>Gender</th><td>Unknown</td></tr>
+            </table>
+        </section>
+</main>
+<footer>
+    <h4>Please get in touch!</h4> 
+</footer>
+
 
 </body>
+
+
+
 </html>
