--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <!--===== HEADER =====-->
+    <!-- HEADER -->
     <header class="l-header">
         <nav class="nav bd-grid">
             <div>
@@ -35,7 +35,7 @@
     </header>
 
     <main class="l-main">
-        <!--===== HOME =====-->
+        <!-- HOME -->
         <section class="home" id="home">
             <div class="home__container bd-grid">
                 <h1 class="home__title"><span>HE</span><br>LLO.</h1>
@@ -48,7 +48,7 @@
             </div>
         </section>
 
-        <!--===== ABOUT =====-->
+        <!-- ABOUT -->
         <section class="about section" id="about">
             <h2 class="section-title">About</h2>
 
@@ -66,12 +66,13 @@
 
                     <div class="about__social">
                         <a href="#" class="about__social-icon"><i class='bx bxl-linkedin'></i></a>
+                        <a href="#" class="about__social-icon"><i class='bx bxl-behance'></i></a>
                     </div>
                 </div>
             </div>
         </section>
 
-        <!--===== SKILLS =====-->
+        <!-- SKILLS -->
         <section class="skills section" id="skills">
             <h2 class="section-title">Skills</h2>
 
@@ -104,7 +105,7 @@
             </div>
         </section>
 
-        <!--===== PORTFOLIO =====-->
+        <!-- PORTFOLIO -->
         <section class="portfolio section" id="portfolio">
             <h2 class="section-title">Portfolio</h2>
 
@@ -134,20 +135,20 @@
             </div>
         </section>
 
-        <!--===== CONTACT =====-->
+        <!-- CONTACT -->
         <section class="contact section" id="contact">
             <h2 class="section-title">Contact</h2>
 
             <div class="contact__container bd-grid">
                 <div class="contact__info">
                     <h3 class="contact__subtitle">EMAIL</h3>
-                    <span class="contact__text">info.mail.com</span>
+                    <span class="contact__text">info@xx.com</span>
 
                     <h3 class="contact__subtitle">PHONE</h3>
-                    <span class="contact__text">+20 999-999</span>
+                    <span class="contact__text">+46 XXX XX XX</span>
 
-                    <h3 class="contact__subtitle">ADRESS</h3>
-                    <span class="contact__text">My contry</span>
+                    <h3 class="contact__subtitle">Location</h3>
+                    <span class="contact__text">Stockholm, Sweden</span>
                 </div>
 
                 <form action="" class="contact__form">
@@ -164,7 +165,7 @@
         </section>
     </main>
 
-    <!--===== FOOTER =====-->
+    <!-- FOOTER -->
     <footer class="footer section">
         <div class="footer__container bd-grid">
             <div class="footer__data">
@@ -194,10 +195,10 @@
         </div>
     </footer>
 
-    <!--===== SCROLL REVEAL =====-->
+    <!-- SCROLL REVEAL -->
     <script src="https://unpkg.com/scrollreveal"></script>
 
-    <!--===== MAIN JS =====-->
+    <!-- MAIN JS -->
     <script src="assets/js/main.js"></script>
 </body>
 
